methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: not found: value b
def testavant() {avance(); b = getCouleurSol()==Color.green; recule(); return bool}
                           ^SlugTracking:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def testavant() {avance(); b = getCouleurSol()==Color.green; recule(); return bool}
                                                                              ^SlugTracking:3: warning: enclosing method testavant has result type Unit: return value discarded
def testavant() {avance(); b = getCouleurSol()==Color.green; recule(); return bool}
                                                                       ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
def testgauche() {gauche();bool=testavant();droit();return bool}
                                         ^SlugTracking:4: error: not found: value droit
def testgauche() {gauche();bool=testavant();droit();return bool}
                                            ^SlugTracking:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def testgauche() {gauche();bool=testavant();droit();return bool}
                                                           ^SlugTracking:4: warning: enclosing method testgauche has result type Unit: return value discarded
def testgauche() {gauche();bool=testavant();droit();return bool}
                                                    ^SlugTracking:5: error: not found: value droit
def testdroit() {droit();bool=testavant();gauche();return bool}
                 ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
def testdroit() {droit();bool=testavant();gauche();return bool}
                                       ^SlugTracking:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def testdroit() {droit();bool=testavant();gauche();return bool}
                                                          ^SlugTracking:5: warning: enclosing method testdroit has result type Unit: return value discarded
def testdroit() {droit();bool=testavant();gauche();return bool}
                                                   ^SlugTracking:6: error: not found: value b
def testarriere() {recule(); b = getCouleurSol()==Color.green; avance(); return bool}
                             ^SlugTracking:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def testarriere() {recule(); b = getCouleurSol()==Color.green; avance(); return bool}
                                                                                ^SlugTracking:6: warning: enclosing method testarriere has result type Unit: return value discarded
def testarriere() {recule(); b = getCouleurSol()==Color.green; avance(); return bool}
                                                                         ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {if (testavant()) {avance();};return estSurBiscuit()}
                                            ^